--- a/style.css
+++ b/style.css
@@ -1,72 +1,21 @@
-/* body{
-    background-color: red;
-    color: white;
-} */
-/* h1,p,form,ul{
-    border:1px solid red
+*{
+    background-color: #b5adad;
+    border: 1px solid black;
 }
-.espacio{
+h1,h2{
+    text-align: center;
+}
+
+.formulario{
+    text-align: center;
+}
+label{
+    display: inline-block;
+    border: 2px solid white;
     width: 200px;
-}
-button{
-    border: 1px solid blue;
-}
-li,p{
-    border: 2px solid green;
-}
-a,span{
-    border: 2px solid rebeccapurple;
+    height: 100px;
 }
 
-section{display:inline-block;width:33%;
-border: 1px solid red;} */
-
-
-/* body{
-    color: green;
-} */
- /* img{
-    margin:auto;
- } */
-
-
- /** CREACION  DEVARIABLES EN CSS
- que esta accesible para todo el doc si quisiera solo para un toso de codigo sera un p, h1 etc  */
-:root{
-    /* nombre de variable y el valor */
-    --color:red;
-    --tamano:20px;
-}
-p{
-    background-color:  var(--color);
-    font-size: var(--tamano);
-}
-.p-first,
-.p-second{
+input[type=text]{
     color: red;
 }
-.p{
-    background-color: aqua;
-}
-
-/* * aqui manda la declaracion se ejecuta por casca aqui no abajo */
-@layer theme;
-@layer base;
-@layer color;
-
-@layer theme{
-    body{
-
-        color:blue;
-    }
-}
-@layer base{
-    body {
-
-        color:orange;
-    }
-}
-
-/* div{
-    display: inline o bloque o inline-bloque o none;
-} */
